apacheHTTPD.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: httpd
  name: httpd
  # annotations:
    # external-dns.alpha.kubernetes.io/hostname: devopstube.com
    # external-dns.alpha.kubernetes.io/ttl: "120" #optiona  
  namespace: argo-devops
spec:
  ports:
  - name: httpd-ui
    port: 80
    targetPort: 80
  selector:
    name: httpd
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd
  namespace: default
spec:
  minReadySeconds: 10
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: httpd
  template:
    metadata:
      labels:
        name: httpd
    spec:
      containers:
      - image: httpd
        imagePullPolicy: IfNotPresent
        name: httpd
        ports:
        - containerPort: 80
          name: ui
