ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wordpress
  namespace: argo-devops
  # annotations:
      # nginx.ingress.kubernetes.io/ssl-redirect: "false"
      # nginx.ingress.kubernetes.io/backend-protocol: "HTTP" 
      # # kubernetes.io/ingress.class: nginx-ingress-internal # <- AWS NLB
      # # nginx.ingress.kubernetes.io/ssl-redirect: "true"
      # # nginx.ingress.kubernetes.io/configuration-snippet: |
        # # if ($http_x_forwarded_proto = 'http') {
          # # return 301 https://$host$request_uri;
        # }  

spec:
  # tls:
    # - secretName: devopstube-com-tls
      # hosts:
        # - devopstube.com
        # - wordpress.devopstube.com 
        
  rules:
  - host: wordpress.devopstube.com
    http:
      paths:
      - backend:
          serviceName: wordpress
          servicePort: 80
          
  - host: argocd.devopstube.com
    http:
      paths:
      - backend:
          serviceName: argocd-server
          servicePort: 80    
          
  - host: httpd.devopstube.com
    http:
      paths:
      - backend:
          serviceName: httpd
          servicePort: 80   

  - host: nginx.devopstube.com
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80            
          
  # - host: blog.devopstube.com
    # http:
      # paths:
      # - backend:
          # serviceName: loki-stack-grafana
          # servicePort: 80
